# OpenGLTutorial

./: .gitignore  CMakeLists.txt  gitignore.txt
shader/: lighting.frag  lighting.vert  pointlight.frag  shader.frag  shader.vert  skybox.frag  skybox.vert
src/: Camera.h  Constants.h  Interactable.h  InteractionManager.cpp  InteractionManager.h  Mesh.h  Pipeline.cpp  Pipeline.h  RenderComponent.cpp  RenderComponent.h  ShaderManager.cpp  ShaderManager.h  Texture.cpp  Texture.h  TrackballCamera.cpp  TrackballCamera.h  glfw_test.cpp  main.cpp
src/io/: GuiManager.cpp  GuiManager.h  IProperty.h  Parameterizable.h  PropertiesCollection.h  PropertiesObject.h
src/scene/: Pipeline.h  Scene.cpp  Scene.h
src/scene/camera/: Camera.h  TrackballCamera.cpp  TrackballCamera.h
src/scene/geometry/: Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
src/scene/geometry/material/: BasicMaterial.cpp  BasicMaterial.h  Material.h
src/scene/geometry/skybox/: CubemapTexture.cpp  CubemapTexture.h  SkyBox.cpp  SkyBox.h
src/scene/light/: DirectionalLight.cpp  DirectionalLight.h  Light.h  PointLight.cpp  PointLight.h
src/util/: Constants.h  Util.h
